k8s/jenkins-master-deployment-kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      containers:
      - image: docker.io/jenkins/jenkins:latest
        imagePullPolicy: Always
        name: jenkins-master
        volumeMounts:
          - mountPath: "/var/jenkins_home"
            name: jenkins-volume
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        - containerPort: 50000
          protocol: TCP
          name: jnlp
        resources:
          limits:
            cpu: "2"
            memory: "4Gi"
          requests:
            memory: "2Gi"
            cpu: "1"
      volumes:
        - name: jenkins-volume
          persistentVolumeClaim:
            claimName: jenkins-claim
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master-service
  namespace: jenkins
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8080
  - port: 50000
    name: jnlp
    protocol: TCP
    targetPort: 50000
  selector:
    app: jenkins-master
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: jenkins-master-route
  namespace: jenkins
spec:
  rules:
  - host: jenkins.apps.kubernetes.local
    http:
      paths:
      - backend:
          serviceName: jenkins-master-service
          servicePort: 80
        path: /
