k8s/registry-ingress-kubernetes.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 0
  name: registry
  namespace: kube-system
spec:
  rules:
  - host: registry.apps.kubernetes.local
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 5000
        path: /
